# ML_Project

./: Malaria_ImageModel.ipynb  pyproject.toml
Image/: image.ipynb
Numerical/: numerical.ipynb
